--- a/personal-portfolio/package.json
+++ b/personal-portfolio/package.json
@@ -49,6 +49,11 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ],
+    "browserslist": [
+      "last 2 versions",
+      "not dead"
     ]
+    
   }
 }
